changed to use $scope.room.messages

--- a/www/templates/inchat.html
+++ b/www/templates/inchat.html
@@ -3,7 +3,7 @@
     <ion-content id="boardroom_bg" has-bouncing="true" class="has-header has-footer screen-calm" delegate-handle="mainScroll">
         <ion-list class="list">
             <li style="background-color: transparent !important; border: none !important; padding-top: 4px !important; padding-bottom: 4px !important;"
-                ng-repeat="msg in messages" ng-class="{
+                ng-repeat="msg in room.messages" ng-class="{
                   'item item-avatar-right nopadding': (socketId == msg.socketId) && !msg.isLog,
                   'item item-avatar-left nopadding': (socketId != msg.socketId) && !msg.isLog,
                   'item item-divider noPadding noBg' : msg.isLog
