Cam update & server route update

--- a/www/templates/cam.html
+++ b/www/templates/cam.html
@@ -17,9 +17,7 @@
             <div class="col"></div>
         </div><br /><br />
         <div class="row">
-            <div class="col"></div>
-            <div class="col-80 ocean"><img style="width: 100%; height: 100%;" ng-show="spot.webcamAvailable" ng-src="{{spot.webcamURL}}" /></div>
-            <div class="col"></div>
+            <div class="col ocean"><img style="width: 100%;" ng-show="spot.webcamAvailable" ng-src="{{spot.webcamURL}}" /></div>
         </div>
     </ion-content>
 </ion-modal-view>
