--- a/www/templates/favourites.html
+++ b/www/templates/favourites.html
@@ -1,5 +1,5 @@
 <ion-view view-title="MY SPOTS">
-    <ion-content id="main_bg" class="screen-calm">
+    <ion-content id="fav_bg" class="screen-calm">
         <div class="exclaim">
             <i class="icon ion-android-favorite placeholder-icon custom-icon-fav"></i><br /><br />Your favourites. In one place.
         </div><br />
