--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -73,11 +73,11 @@
             <div class="item tabs tabs-secondary tabs-icon-left">
                 <a class="tab-item" ng-click="fullReport()">
                     <i class="icon ion-help-buoy custom-icon-for"></i>
-                    <b>Full forecast</b>
+                    <b style="color: #393939">Full forecast</b>
                 </a>
                 <a class="tab-item" ng-controller="CamCtrl" ng-click="cam()">
                     <i class="icon ion-camera custom-icon-cam"></i>
-                    <b>Webcam</b>
+                    <b style="color: #393939">Webcam</b>
                 </a>
                 <!--<a class="tab-item" ng-controller="ReportCtrl" ng-click="report()">
                     <i class="icon ion-alert-circled custom-icon-rep"></i>
