--- a/www/css/style.css
+++ b/www/css/style.css
@@ -29,7 +29,7 @@ color: #009ec2;
 }
 
 .custom-icon-log {
-  color : #393939;
+  color : #009ec2;
 }
 
 .custom-icon-close {
@@ -82,12 +82,12 @@ img.logo {
 }
 
 .custom-icon-reg {
-  color : #393939;
+  color : #009ec2;
   font-size: 50px;
 }
 
 .custom-icon-regmenu {
-  color : #393939;
+  color : #009ec2;
 }
 
 .custom-icon-search {
@@ -105,7 +105,7 @@ img.logo {
 }
 
 .custom-icon-set {
-  color : #393939;
+  color : #fff;
 }
 
 .custom-icon-send {
@@ -113,7 +113,7 @@ img.logo {
 }
 
 .custom-icon-setmenu {
-  color : #393939;
+  color : #009ec2;
 }
 
 .custom-icon-chat {
@@ -136,7 +136,7 @@ img.logo {
 }
 
 .custom-icon-favmenu {
-  color : #db0000;
+  color : #009ec2;
 }
 
 .custom-icon-chatmenu {
@@ -177,8 +177,8 @@ img.logo {
     color: #fff; }
 
 .bar-new {
-    border-color: #009688;
-    background: #009688;
+    border-color: #009ec1;
+    background: #009ec1;
     color: #fff; }
     .bar-new.title {
       color: #fff; }
@@ -187,19 +187,19 @@ img.logo {
     font-size: 23px;
     font-weight: 700;
     padding:10px 10px 10px 20px;
-    color: #393939;
+    color: #009ec1;
 }
 
 .spot span {
     font-size: 14px;
     font-weight: 700;
-    color: #009ec2;
+    color: #fff;
 }
 
 .exclaim {
     font-size: 20px;
     padding:20px 10px 0px 20px;
-    color: #9a9a9a;
+    color: #fff;
     text-align: center;
 }
 
@@ -218,20 +218,26 @@ img.logo {
 
 .bar-footer {
     border-color: #009688 !important;
-    background: #009688 !important;
+    background: transparent !important;
     border-top-width: 0px;
     color: #fff; }
+
+.bar-footer-chat {
+    border-color: #009ec2 !important;
+    background: #009ec2 !important;
+    border-top-width: 0px;
+    color: #fff; }    
 
 .item {
     border: none !important;
     background-color: transparent !important;
-    color: #393939;
+    color: #fff;
 }
 
 .item .item-content {
     border: none !important;
     background-color: transparent !important;
-    color: #393939;
+    color: #fff;
 }
 
 h1.title {
@@ -316,7 +322,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 ion-list ion-item span {
     font-size: 12px;
     font-weight: 700;
-    color: #393939;
+    color: #fff;
 }
 
 .card, .list-inset {
@@ -644,31 +650,37 @@ a.autolinker {
 }
 
 #chat_bg {
-	background-image: url('../img/chat_bg.png');
+	background-image: url('../img/chat.jpg');
 	background-size: cover;
 	background-position: 50% 0;
 }
 
 #main_bg {
-	background-image: url('../img/main_bg.png');
+	background-image: url('../img/wave.jpg');
 	background-size: cover;
 	background-position: 50% 0;
 }
 
+#fav_bg {
+  background-image: url('../img/wave.jpg');
+  background-size: cover;
+  background-position: 70% 0;
+}
+
 #settings_bg {
-	background-image: url('../img/settings_bg.png');
+	background-image: url('../img/wave.jpg');
 	background-size: cover;
 	background-position: 50% 0;
 }
 
 #menu_bg {
-	background-image: url('../img/settings_bg.png');
+	background-image: url('../img/wave.jpg');
 	background-size: cover;
 	background-position: 50% 0;
 }
 
 #boardroom_bg {
-	background-image: url('../img/boardroom_bg.png');
+	background-image: url('../img/wave.jpg');
 	background-size: cover;
 	background-position: 50% 0;
 }
