--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -70,11 +70,11 @@
                     SETTINGS
                 </ion-item>
                 <ion-item class="menu-reg" nav-clear menu-close ng-click="login()" ng-show="!isLoggedIn" style="width: 100%;">
-                    <i class="icon ion-checkmark-circled placeholder-icon custom-icon-log"></i>
+                    <i class="icon ion-log-in placeholder-icon custom-icon-log"></i>
                     SIGN IN
                 </ion-item>
                 <ion-item class="menu-reg"nav-clear menu-close ng-click="logout()" ng-show="isLoggedIn" href="#/app/regions" style="width: 100%;">
-                    <i class="icon ion-close-circled placeholder-icon custom-icon-log"></i>
+                    <i class="icon ion-log-out placeholder-icon custom-icon-log"></i>
                     SIGN OUT
                 </ion-item>
             </ion-list>
