--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col"></div>
                 <div class="col"></div>
-                <div class="exclaim2" style="font-weight: bold;">
+                <div class="exclaim" style="font-weight: bold;">
                     <i class="icon ion-person placeholder-icon custom-icon"></i>&nbsp;{{service.user.username}}
                 </div>
                 <div class="col"></div>
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col"></div>
                 <div class="col"></div>
-                <div class="exclaim2" style="font-weight: bold;">
+                <div class="exclaim" style="font-weight: bold;">
                     <i class="icon ion-android-mail placeholder-icon custom-icon"></i>&nbsp;{{service.user.email}}
                 </div>
                 <div class="col"></div>
