--- a/www/templates/regions.html
+++ b/www/templates/regions.html
@@ -2,7 +2,7 @@
   <ion-content id="main_bg" class="screen-calm">     
           <div class="row">
               <div class="col"></div>
-            <div class="col"><br /><br /><br /><img src="img/logo.png" width="100"/></div>
+            <div class="col"><img src="img/logo.png" width="100"/></div>
               <div class="col"></div>
           </div>
       <div class="exclaim">
@@ -25,9 +25,6 @@
               <i class="icon ion-person-add placeholder-icon custom-icon"></i>Sign up
           </ion-item>
       </ion-list>
-      </div>      
-      <br />
-      <br />
-      <br />
+      </div>  
   </ion-content>
 </ion-view>
