--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -1,9 +1,9 @@
 <ion-view view-title="CURRENT CONDITIONS">
-    <ion-content id="main_bg" class="screen-calm">
+    <ion-content id="report_bg" class="screen-calm">
         <div class="item item-divider">
             <div class="col spot">&nbsp;&nbsp;{{spot.name}}<span> {{spot.regionName | uppercase}}</span>&nbsp;&nbsp;<i ng-click="toggleFavourite()" class="icon ion-android-favorite placeholder-icon fav-spot" ng-class="isFavourited ? 'custom-icon-fav' : ''"></i></div>
         </div>
-        <div class="list card">
+        <div class="list card" style="background-color: transparent !important;">
             <div>
                 <!-- Sunrise and Sunset - Moon phase -->
                 <div class="row">
@@ -73,11 +73,11 @@
             <div class="item tabs tabs-secondary tabs-icon-left">
                 <a class="tab-item" ng-click="fullReport()">
                     <i class="icon ion-help-buoy custom-icon-for"></i>
-                    <b style="color: #393939">Full forecast</b>
+                    <b style="color: #fff">FULL FORECAST</b>
                 </a>
                 <a class="tab-item" ng-controller="CamCtrl" ng-click="cam()">
                     <i class="icon ion-camera custom-icon-cam"></i>
-                    <b style="color: #393939">Webcam</b>
+                    <b style="color: #fff">WEBCAM</b>
                 </a>
                 <!--<a class="tab-item" ng-controller="ReportCtrl" ng-click="report()">
                     <i class="icon ion-alert-circled custom-icon-rep"></i>
