--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -20,7 +20,7 @@
                 <label class="item">
                     <button ng-controller="LoginCtrl" class="button button-block button-calm" ng-click="login()">SIGN IN</button>
                 </label>
-                <div class="exclaim3">
+                <div class="exclaim">
                 Don't have an account?
                 </div><br />
                 <label class="item">
