--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -38,7 +38,7 @@
                     Logout
                 </ion-item> -->
                 <ion-item class="menu-reg" menu-close href="#/app/regions">
-                    <i class="icon ion-earth placeholder-icon custom-icon-regmenu"></i>
+                    <i class="icon ion-android-cloud placeholder-icon custom-icon-regmenu"></i>
                         SURF REPORTS
                 </ion-item>
                 <ion-item class="menu-reg" menu-close href="#/app/favourites" ng-show="isLoggedIn">
