--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -1,6 +1,6 @@
 <ion-view view-title="CURRENT CONDITIONS">
     <ion-content id="report_bg" class="screen-calm">
-        <div class="item item-divider">
+        <div class="item item-divider notify">
             <div class="col spot">&nbsp;&nbsp;{{spot.name}}<span> {{spot.regionName | uppercase}}</span>&nbsp;&nbsp;<i ng-click="toggleFavourite()" class="icon ion-android-favorite placeholder-icon fav-spot" ng-class="isFavourited ? 'custom-icon-fav' : ''"></i></div>
         </div>
         <div class="list card" style="background-color: transparent !important;">
