--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,6 +14,10 @@ color: #009ec2;
   color: #fff !important;
 }
 
+.fullReport tr {
+  height: 50px;
+}
+
 .timeStamp {
   font-size: 10px !important;
   text-align: right !important;
@@ -299,6 +303,11 @@ h1.title {
 .rep {
     font-size: 30px;
     color: #fff;
+}
+
+.notify {
+  background-color: rgba(57, 57, 57, 0.5) !important;
+  padding: 20px !important;
 }
 
 .seperator {
