--- a/www/templates/region.html
+++ b/www/templates/region.html
@@ -1,7 +1,7 @@
 <ion-view view-title="<span>{{region.name | uppercase}}, <span>{{region.country | uppercase}}</span></span>">
     <ion-content has-bouncing="true" id="main_bg" class="screen-calm">
-        <div class="exclaim">
-            <i class="icon ion-pin placeholder-icon custom-icon-rego"></i><br /><br />Choose your spot.<br /> View a <b>live report. </b><br />Check out the <b>5 day forecast.
+        <div class="exclaim notify">
+            <i class="icon ion-android-pin placeholder-icon custom-icon-rego"></i><br /><br />Choose your spot.<br /> View a <b>live report. </b><br />Check out the <b>5 day forecast.
             </b><br /> Maybe even find a <b>webcam</b>
         </div><br />
         <ion-list>
