--- a/www/templates/regions.html
+++ b/www/templates/regions.html
@@ -1,25 +1,20 @@
 <ion-view view-title="WAVEY">
-  <ion-content id="main_bg" class="screen-calm">     
-          <div class="row">
-              <div class="col"></div>
-            <div class="col"><img src="img/logo.png" width="100"/></div>
-              <div class="col"></div>
-          </div>
-      <div class="exclaim">
-          Choose your area. Find your spot.<br /> View the report
-      </div><br />
+  <ion-content id="main_bg" class="screen-calm">  
+  <div class="exclaim notify">
+            <i class="icon ion-android-cloud placeholder-icon custom-icon-rego"></i><br /><br />Choose your area. Find your spot.<br /> View the report
+        </div><br />
     <ion-list>
         <ion-item ng-repeat=" region in regions" href="#/app/regions/{{region.id}}">
             {{region.name}}, <span>{{region.country | uppercase}}</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
     </ion-list>
       <div ng-show="!isLoggedIn">
-      <div class="exclaim">
-          <i class="icon ion-android-favorite-outline placeholder-icon custom-icon-fav"></i><br /><br />Save spots for quick access
+      <div class="exclaim notify">
+          Sign in to save spots for quick access, and chat with other surfers
       </div><br />
       <ion-list>
           <ion-item ng-click="login()">
-              <i class="icon ion-checkmark-circled placeholder-icon custom-icon"></i>Sign in
+              <i class="icon ion-log-in placeholder-icon custom-icon"></i>Sign in
           </ion-item>
           <ion-item ng-controller="SignupCtrl" ng-click="signup()">
               <i class="icon ion-person-add placeholder-icon custom-icon"></i>Sign up
