--- a/www/templates/regions.html
+++ b/www/templates/regions.html
@@ -1,7 +1,7 @@
 <ion-view view-title="WAVEY">
   <ion-content id="main_bg" class="screen-calm">  
   <div class="exclaim notify">
-            <i class="icon ion-android-cloud placeholder-icon custom-icon-rego"></i><br /><br />Choose your area. Find your spot.<br /> View the report
+            <img src="img/logo.png" width="50" /><br /><br />Choose your area. Find your spot.<br /> View the report
         </div><br />
     <ion-list>
         <ion-item ng-repeat=" region in regions" href="#/app/regions/{{region.id}}">
