--- a/www/templates/favourites.html
+++ b/www/templates/favourites.html
@@ -1,6 +1,6 @@
 <ion-view view-title="MY SPOTS">
     <ion-content id="fav_bg" class="screen-calm">
-        <div class="exclaim">
+        <div class="exclaim notify">
             <i class="icon ion-android-favorite placeholder-icon custom-icon-fav"></i><br /><br />Your favourites. In one place.
         </div><br />
         <ion-list>
