--- a/www/templates/fullreport.html
+++ b/www/templates/fullreport.html
@@ -7,7 +7,7 @@
     </ion-header-bar>
     <ion-content id="report_bg" class="screen-calm">
       <div class="exclaim notify">
-          <i class="icon ion-help-buoy placeholder-icon custom-icon-reg"></i><br /><br />
+          <img src="img/logo.png" width="50" /><br /><br />
           5 day forecast<br />
           Swipe <i class="icon ion-arrow-left-c placeholder-icon custom-icon"></i>
           <i class="icon ion-arrow-right-c placeholder-icon custom-icon"></i> to view each day
