--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,7 +5,7 @@
             <button class="button button-clear" ng-click="closeLogin()"><i class="icon ion-close-round placeholder-icon custom-icon-close"></i></button>
         </div>
     </ion-header-bar>
-    <ion-content id="settings_bg" class="screen-calm">
+    <ion-content id="settings_bg" class="screen-calm" has-bouncing="true">
         <div><img class="logo" src="img/logo.png" width="100" /></div>
         <form>
             <div class="list">
