--- a/www/templates/boardroom.html
+++ b/www/templates/boardroom.html
@@ -1,4 +1,4 @@
-<ion-view view-title="THE BOARDROOM">
+<ion-view view-title="BOARDROOM">
   <ion-content id="boardroom_bg" class="screen-calm">
       <div class="exclaim notify">
           <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i><br /><br />Choose your area<br />Chat to other surfers nearby
