--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -51,11 +51,11 @@
                 </ion-item>
                 <ion-item class="menu-reg" menu-close href="#/app/boardroom" ng-show="isLoggedIn">
                     <i class="icon ion-coffee placeholder-icon custom-icon-chatmenu"></i>
-                    THE BOARDROOM
+                    BOARDROOM
                 </ion-item>
                 <ion-item class="menu-reg" menu-close ng-click="login()" ng-show="!isLoggedIn">
                     <i class="icon ion-coffee placeholder-icon custom-icon-chatmenu"></i>
-                    THE BOARDROOM
+                    BOARDROOM
                 </ion-item>
                 <!--<ion-item menu-close href="#/app/chats" ng-show="isLoggedIn">
                     <i class="icon ion-chatbubbles placeholder-icon custom-icon-chat"></i>
