--- a/www/templates/fullreport.html
+++ b/www/templates/fullreport.html
@@ -5,7 +5,7 @@
             <button class="button button-clear" ng-click="closeFullReport()"><i class="icon ion-close-round placeholder-icon custom-icon-close"></i></button>
         </div>
     </ion-header-bar>
-    <ion-content id="report_bg" class="screen-calm">
+    <ion-content id="report_bg" class="screen-calm" has-bouncing="true">
       <div class="exclaim notify">
           <img src="img/logo.png" width="50" /><br /><br />
           5 day forecast<br />
