--- a/www/templates/region.html
+++ b/www/templates/region.html
@@ -5,7 +5,7 @@
             </b><br /> Maybe even find a <b>webcam</b>
         </div><br />
         <ion-list>
-            <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.id}}">
+            <ion-item ng-repeat="spot in region.spots" href="#/app/regions/{{region._id}}/{{spot.name}}">
                 {{spot.name}} <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
             </ion-item>
         </ion-list>
