prof pic fix and style change

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -23,7 +23,7 @@
             <div class="row" ng-show="isLoggedIn">
                 <div class="col"></div>
                 <div class="exclaim" style="font-weight: bold; color: #009ec2">
-                    <img class="mainprofile-pic" ng-src="{{service.user.profilepic}}" />&nbsp;{{service.user.username}}
+                    <img class="mainprofile-pic" ng-src="http://{{service.user.profilepic}}" /><br /><br />{{service.user.username}}
                 </div>
                 <div class="col"></div>
                 <div class="col"></div>
