--- a/www/templates/inchat.html
+++ b/www/templates/inchat.html
@@ -8,6 +8,7 @@
                   'item item-avatar-left nopadding': (socketId != msg.socketId) && !msg.isLog,
                   'item item-divider noPadding noBg' : msg.isLog
                    }">
+                <img ng-hide="msg.isLog" ng-src="http://{{service.user.profilepic}}"/>
                 <div ng-class="{
                   'bubbleRight item-text-wrap': (socketId == msg.socketId) && !msg.isLog ,
 			            'bubbleLeft item-text-wrap': (socketId != msg.socketId) && !msg.isLog}">   
