profile pic inchat fix

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -696,7 +696,7 @@ a.autolinker {
 }
 
 #boardroom_bg {
-	background-image: url('../img/wave.jpg');
+	background-image: url('../img/chat.jpg');
 	background-size: cover;
 	background-position: 50% 0;
 }
