--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -5,7 +5,7 @@
                 <div class="col"></div>
                 <div class="col"></div>
                 <div class="exclaim" style="font-weight: bold;">
-                    <i class="icon ion-person placeholder-icon custom-icon"></i>&nbsp;{{service.user.username}}
+                    <img class="mainprofile-pic" ng-src="http://{{service.user.profilepic}}" /><br /><br />{{service.user.username}}
                 </div>
                 <div class="col"></div>
                 <div class="col"></div>
@@ -14,7 +14,7 @@
                 <div class="col"></div>
                 <div class="col"></div>
                 <div class="exclaim" style="font-weight: bold;">
-                    <i class="icon ion-android-mail placeholder-icon custom-icon"></i>&nbsp;{{service.user.email}}
+                    {{service.user.email}}
                 </div>
                 <div class="col"></div>
                 <div class="col"></div>
