--- a/www/templates/inchat.html
+++ b/www/templates/inchat.html
@@ -13,7 +13,7 @@
                   'bubbleRight item-text-wrap': (socketId == msg.socketId) && !msg.isLog ,
 			            'bubbleLeft item-text-wrap': (socketId != msg.socketId) && !msg.isLog}">   
                     <h2 ng-hide="msg.isLog"><b>{{msg.sender}}</b></h2>
-                    <p ng-hide="msg.isLog" ng-bind-html="msg.message"></p>               
+                    <p class="messageLeft" ng-hide="msg.isLog" ng-bind-html="msg.message"></p>               
                     <p class="timeStamp" ng-hide="msg.islog">{{msg.timestamp}}</p>
                     <center><p style="color:#fff;" ng-show="msg.isLog">{{msg.message}}</p></center>
                 </div>
