Update boardroom ctrl ref

--- a/www/templates/boardroom.html
+++ b/www/templates/boardroom.html
@@ -1,17 +1,17 @@
 <ion-view view-title="BOARDROOM">
   <ion-content id="boardroom_bg" class="screen-calm">
       <div class="exclaim notify">
-          <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i><br /><br />Choose your area<br />Chat to other surfers nearby
+          <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i><br /><br />Choose your area<br />Chat to others
       </div><br />
     <ion-list>
         <ion-item ng-click="gochat('{{service.user.username}}', 'ECT')">
-            Eastern Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
+            ECT - Eastern Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
         <ion-item ng-click="gochat('{{service.user.username}}', 'KZN')">
-            KwaZulu Natal, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
+            KZN - KwaZulu Natal, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
         <ion-item ng-click="gochat('{{service.user.username}}', 'WCT')">
-            Western Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
+            WCT - Western Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
     </ion-list>
       <div class="row">
