--- a/www/templates/boardroom.html
+++ b/www/templates/boardroom.html
@@ -1,5 +1,5 @@
-<ion-view view-title="BOARDROOM">
-  <ion-content id="boardroom_bg" class="screen-calm">
+<ion-view view-title="">
+  <ion-content id="boardroom_bg" class="screen-calm" has-bouncing="true">
       <div class="exclaim notify">
           <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i><br /><br />Choose your area<br />Chat to others
       </div><br />
