--- a/www/templates/region.html
+++ b/www/templates/region.html
@@ -1,6 +1,7 @@
-<ion-view view-title="<span>{{region.name | uppercase}}, <span>{{region.country | uppercase}}</span></span>">
+<ion-view view-title="">
     <ion-content has-bouncing="true" id="main_bg" class="screen-calm">
         <div class="exclaim notify">
+            <span>{{region.name}}, <span>{{region.country}}</span></span><br /><br />
             <i class="icon ion-android-pin placeholder-icon custom-icon-rego"></i><br /><br />Choose your spot<br /> View a <b>live report </b><br />Check out the <b>5 day forecast
             </b><br /> Maybe even find a <b>webcam</b>
         </div><br />
