--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,6 +1,7 @@
-<ion-view view-title="SETTINGS">
+<ion-view view-title="">
     <ion-content id="settings_bg" class="screen-calm">
-        <ion-list>           
+        <ion-list>
+        <div class="exclaim notify">
             <div class="row">
                 <div class="col"></div>
                 <div class="col"></div>
@@ -11,14 +12,12 @@
                 <div class="col"></div>
             </div>
             <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
                 <div class="exclaim" style="font-weight: bold;">
                     {{service.user.email}}
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
             </div>
+        </div>           
+            
         </ion-list><br />
         <ion-list>
             <li class="nav-clear item item-toggle">
