--- a/www/templates/regions.html
+++ b/www/templates/regions.html
@@ -1,4 +1,4 @@
-<ion-view view-title="WAVEY">
+<ion-view view-title="">
   <ion-content id="main_bg" class="screen-calm" has-bouncing="true">
   <div class="exclaim notify">
             <img src="img/logo.png" width="50" /><br /><br />Choose your area. Find your spot.<br /> View the report
