--- a/www/templates/inchat.html
+++ b/www/templates/inchat.html
@@ -7,14 +7,14 @@
         <ion-list class="list">
             <li style="background-color: transparent !important; border: none !important; padding-top: 4px !important; padding-bottom: 4px !important;"
                 ng-repeat="msg in room.messages" ng-class="{
-                  'item item-avatar-right nopadding': (socketId == msg.socketId) && !msg.isLog,
-                  'item item-avatar-left nopadding': (socketId != msg.socketId) && !msg.isLog,
+                  'item item-avatar-right nopadding': (nickname == msg.sender) && !msg.isLog,
+                  'item item-avatar-left nopadding': (nickname != msg.sender) && !msg.isLog,
                   'item item-divider noPadding noBg' : msg.isLog
                    }">
                 <img ng-hide="msg.isLog" ng-src="http://{{msg.profilepic}}"/>
                 <div ng-class="{
-                  'bubbleRight item-text-wrap': (socketId == msg.socketId) && !msg.isLog ,
-			            'bubbleLeft item-text-wrap': (socketId != msg.socketId) && !msg.isLog}">   
+                  'bubbleRight item-text-wrap': (nickname == msg.sender) && !msg.isLog ,
+			            'bubbleLeft item-text-wrap': (nickname != msg.sender) && !msg.isLog}">   
                     <h2 ng-hide="msg.isLog"><b>{{msg.sender}}</b></h2>
                     <p class="messageLeft" ng-hide="msg.isLog" ng-bind-html="msg.message"></p>               
                     <p class="timeStamp" ng-hide="msg.islog">{{msg.timestamp}}</p>
