--- a/www/templates/regions.html
+++ b/www/templates/regions.html
@@ -10,7 +10,7 @@
     </ion-list><br />
       <div ng-show="!isLoggedIn">
       <div class="exclaim2 notify">
-          Sign in to save spots for quick access, and chat with other surfers
+          Sign in to save spots for instant access
       </div><br />
       <ion-list style="text-align: center;">
           <ion-item ng-click="login()">
