--- a/www/css/style.css
+++ b/www/css/style.css
@@ -611,7 +611,7 @@ a.autolinker {
 	max-width: 100%;
 	min-height: 50px;
 	padding: 5px;
-	background: #aeeeff;
+	background: #fff;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -624,7 +624,7 @@ a.autolinker {
 	position: absolute;
 	border-style: solid;
 	border-width: 7px 20px 7px 0;
-	border-color: transparent #aeeeff;
+	border-color: transparent #fff;
 	display: block;
 	width: 0;
 	z-index: 1;
