--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,6 +12,8 @@
       <ion-nav-buttons side="right">
           <button ng-show="isLoggedIn" class="button button-icon button-calm ion-android-favorite" ng-click="favourites()"></button>
           <button ng-show="isLoggedIn" class="button button-icon button-calm ion-coffee" ng-click="boardroom()"></button>
+          <button ng-show="!isLoggedIn" class="button button-icon button-calm ion-android-favorite" ng-click="login()"></button>
+          <button ng-show="!isLoggedIn" class="button button-icon button-calm ion-coffee" ng-click="login()"></button>
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
