--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -5,15 +5,15 @@
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-      <img menu-toggle="left" class="nav-pic" ng-src="http://{{service.user.profilepic}}" ng-show="isLoggedIn"/>
-      <button class="button button-icon button-calm ion-navicon" menu-toggle="left" ng-hide="isLoggedIn"></button>
+      <button class="button button-icon button-calm ion-navicon" menu-toggle="left"></button>
       </ion-nav-buttons>
 
       <ion-nav-buttons side="right">
           <button ng-show="isLoggedIn" class="button button-icon button-calm ion-android-favorite" ng-click="favourites()"></button>
-          <button ng-show="isLoggedIn" class="button button-icon button-calm ion-coffee" ng-click="boardroom()"></button>
+          <button ng-show="isLoggedIn" class="button button-icon button-calm ion-android-chat" ng-click="boardroom()"></button>
           <button ng-show="!isLoggedIn" class="button button-icon button-calm ion-android-favorite" ng-click="login()"></button>
-          <button ng-show="!isLoggedIn" class="button button-icon button-calm ion-coffee" ng-click="login()"></button>
+          <button ng-show="!isLoggedIn" class="button button-icon button-calm ion-android-chat" ng-click="login()"></button>
+          <img class="nav-pic" ng-click="settings()" ng-src="http://{{service.user.profilepic}}" ng-show="isLoggedIn"/>
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
@@ -27,7 +27,7 @@
         <!--<ion-header-bar class="bar-new">
             <h1 class="bar-new title">My Menu</h1>
         </ion-header-bar>-->
-        <ion-content id="menu_bg" class="screen-menu">        
+        <ion-content id="menu_bg" class="screen-menu">
             <div class="row" ng-show="isLoggedIn">
                 <div class="col"></div>
                 <div class="exclaim" style="font-weight: bold; color: #009ec2">
