--- a/www/templates/boardroom.html
+++ b/www/templates/boardroom.html
@@ -1,7 +1,7 @@
 <ion-view view-title="">
   <ion-content id="boardroom_bg" class="screen-calm" has-bouncing="true">
       <div class="exclaim notify">
-          <i class="icon ion-coffee placeholder-icon custom-icon-chat"></i><br /><br />Choose your area<br />Chat to others
+          <i class="icon ion-chatboxes placeholder-icon custom-icon-chat"></i><br /><br />Choose your area<br />Chat to others
       </div><br />
     <ion-list>
         <ion-item ng-click="gochat('{{service.user.username}}', 'ECT')">
