--- a/www/templates/regions.html
+++ b/www/templates/regions.html
@@ -1,17 +1,22 @@
 <ion-view view-title="">
   <ion-content id="main_bg" class="screen-calm" has-bouncing="true">
   <div class="exclaim notify">
-            <img src="img/logo.png" width="50" /><br /><br />Choose your area. Find your spot.<br /> View the report
+            <i class="icon ion-android-cloud placeholder-icon custom-icon-chat"></i><br /><br />Choose your area. Find your spot.<br /> View the report
         </div><br />
     <ion-list>
         <ion-item ng-repeat=" region in regions" href="#/app/regions/{{region._id}}">
             {{region.name}}, <span>{{region.country | uppercase}}</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
-    </ion-list><br />
+    </ion-list>
+    <div ng-show="isLoggedIn" class="row">
+        <div class="col"></div>
+        <div class="col"><br /><br /><br /><img src="img/logo.png" width="100%" /></div>
+        <div class="col"></div>
+    </div><br />
       <div ng-show="!isLoggedIn">
       <div class="exclaim2 notify">
           Sign in to save spots for instant access
-      </div><br />
+      </div>
       <ion-list style="text-align: center;">
           <ion-item ng-click="login()">
               <i class="icon ion-unlocked placeholder-icon custom-icon"></i>Sign in
