--- a/www/templates/boardroom.html
+++ b/www/templates/boardroom.html
@@ -5,13 +5,13 @@
       </div><br />
     <ion-list>
         <ion-item ng-click="gochat('{{service.user.username}}', 'ECT')">
-            ECT - Eastern Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
+            Eastern Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
         <ion-item ng-click="gochat('{{service.user.username}}', 'KZN')">
-            KZN - KwaZulu Natal, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
+            KwaZulu Natal, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
         <ion-item ng-click="gochat('{{service.user.username}}', 'WCT')">
-            WCT - Western Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
+            Western Cape, <span>SOUTH AFRICA</span> <i class="icon ion-chevron-right placeholder-icon custom-icon"></i>
         </ion-item>
     </ion-list>
       <div class="row">
