--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -6,18 +6,15 @@
                 <div class="col"></div>
                 <div class="col"></div>
                 <div class="exclaim" style="font-weight: bold;">
-                    <img class="mainprofile-pic" ng-src="http://{{service.user.profilepic}}" /><br /><br />{{service.user.username}}
+                    <img class="mainprofile-pic" ng-src="http://{{service.user.profilepic}}" />
+                    <br /><br />{{service.user.username}}
+                    <br /><br />{{service.user.email}}
                 </div>
                 <div class="col"></div>
                 <div class="col"></div>
             </div>
-            <div class="row">
-                <div class="exclaim" style="font-weight: bold;">
-                    {{service.user.email}}
-                </div>
-            </div>
-        </div>           
-            
+        </div>
+
         </ion-list><br />
         <ion-list>
             <li class="nav-clear item item-toggle">
